feat: 升级 JDK 21 并补全函数式 demo 与文档
构建：
- pom.xml 改为 release 21，maven-compiler-plugin 3.1→3.13.0
- Jackson 统一升到 2.17.2（修复旧版 CVE）

core（自实现原语）：
- 修复 MapProcessor/FilterProcessor 的 null 死循环 bug
- Optional 改为不可变（value final）+ 补 empty/of/ofNullable/filter/orElse/orElseGet/ifPresent/or，get() 空时抛 NSE
- 自实现 Stream 补 reduce/flatMap(FlatMapProcessor)/count/forEach
- throwing 死代码接入：新增 ThrowingCases，移除硬编码 println，Javadoc 区分 checked vs throwing
- List 防御性拷贝、Mapped*Tree 命名澄清、Caching 删除冗余泛型

function：
- 填充空壳 LambdaUsage/FunctionalUsage（函数作类型/值、函数式多态、checked 异常 wrap）
- 新增 FunctionalInterfaceCases（9 接口全覆盖）、MethodReferenceCases（4 种方法引用）
- Product.id 默认值修正、Predicate.not() 改 Java 8 兼容 .negate()

optional：
- 补全 13 个 API（empty/orElseGet/filter/or/flatMap/stream/不推荐组），含 orElse vs orElseGet eager/lazy 陷阱
- map.map.map 改完整闭环；填充 JpaCases（模拟 Spring Data findById）；JSON 场景补 empty/null 对比

pattern：
- 填充空壳 HOFCases/OOPCacheCases；新增 Recursion/Generator/designpattern(模板方法/策略/装饰器) cases
- CurringCases→CurryingCases（拼写+bug 修复+命名柯里化+Currying 工具类用法）
- 补全 ComposeCases 三型（静态/半动态/动态）

stream：
- 填充空壳 StreamCreationCases/IntegerStreamCases
- 新增 StreamCollect/Reduce/Parallel/Intermediate cases（Collectors 全家桶、三种 reduce、并行流陷阱、flatMap）
- 修复 AccountStreamCases 多余取反 bug

文档：
- Readme.md：修错别字(nagate/nagate/object::/Optinal/范型)、全角转半角、统一标题层级、补空章节正文+demo 指引、新增 core 自实现说明
- java-functional-programming-guide.md：修正 Stream Gatherers 版本(Java 24 转正)与臆造 API、calculateFinalPrice 签名矛盾、方法引用性能迷思、职责链→校验管道、模板方法语义、_ 未命名模式版本、结构化并发 API、虚假"均经编译验证"声明